Revision history for perl distribution Convos

6.15 Not Released
 - Fix invitation link handling
 - Improved handling of errors on the login page
 - Improved input field focus on login screen
 - Improved "Dracula" theme form field rendering

6.14 2021-04-29T20:30:00+0900
 - Fix iOS bug, where Safari would crash because it can't handle complex regexes

6.13 2021-04-29T10:59:00+0900
 - Add "Dracula" color theme
 - Fix handling URLs with conversation names ending with ".js"
 - Improved emoji autocomplete #547
 - Updated emojis list #547
 - Removed emojis selector from ChatInput on small screens
 - Will set MOJO_REVERSE_PROXY based on CONVOS_REVERSE_PROXY

6.12 2021-04-16T09:45:00+0900
 - Fix on_connect_commands might not be set in all cases
 - Fix toggling TLS and TLS verify checkboxes
 - Improved feedback to user on failed/successful save of forms
 - Improved feedback in case TLS settings are incorrect

6.11 2021-04-10T19:54:00+0900
 - Changed /logout to always result in 302 redirect #586
 - Removed "dependencies" from /settings

6.10 2021-04-05T14:12:00+0900
 - Will prompt the user to enable notifications
 - Fix chat action links
 - Fix editing connection when uri= is present
 - Fix position for "jump to now" above chat input

6.09 2021-04-05T15:18:00+0900
 - Add "skip_queue" to connection profile
 - Fix not skip the connection queue on connect failure
 - Hide port number in connection list

6.08 2021-04-05T12:43:00+0900
 - Add support for some more command aliases #580
 - Add logging of login attempts #582
 - Add support for connection profiles #584
 - Add DELETE /api/connection-profiles/:id #584
 - Add GET /api/connection-profiles #584
 - Add POST /api/connection-profiles #584
 - Add focus to login form on desktop
 - Fix width of inputs on ConversationAdd page
 - Renamed /settings/connection to /settings/connections #584
 - Removed "protocol" from Convos::Core::Connection
 - Removed dependencies from "Settings"